# ml-and-ai-assignments

./: ASSIGNMENTS_SUMMARY.md  COMPLETE_INDEX.md  COMPLETION_REPORT.md  INTERMEDIATE_ADVANCED_ASSIGNMENTS.md  QUICK_REFERENCE.md  README.md  README_ASSIGNMENTS_11-19.md  pyproject.toml
numpy-and-pandas-questions/: 01__numpy__inventory_stock_levels.py  02__numpy__freight_cost_optimization.py  03__numpy__demand_forecasting.py  04__numpy__warehouse_distribution.py  05__numpy__supplier_performance.py  06__numpy__abc_inventory_analysis.py  07__numpy__lead_time_safety_stock.py  08__numpy__route_optimization.py  09__numpy__warehouse_capacity.py  10__numpy__product_mix_optimization.py  11__pandas__transaction_analysis.py  12__pandas__shipment_tracking.py  13__pandas__inventory_cleaning.py  14__pandas__multi_location_orders.py  15__pandas__customer_order_fulfillment.py  16__pandas__cost_analysis_benchmarking.py  17__pandas__inventory_aging.py  18__pandas__supplier_scorecard.py  19__pandas__demand_analysis.py  20__pandas__risk_assessment.py  QUICK_REFERENCE.md  README_EXERCISES.md
python_basics/: __init__.py  async_programming_19.py  bin_collection_06.py  comprehensions_13.py  context_managers_16.py  decorators_14.py  error_handling_11.py  file_io_12.py  inventory_normalization_01.py  iterators_generators_15.py  linehaul_calculator_10.py  naive_forecasting_07.py  oop_inheritance_17.py  purchase_order_costing_04.py  routing_rules_engine_02.py  shipment_tracker_05.py  sku_comparison_08.py  stock_reconciliation_03.py  type_hinting_18.py  warehouse_allocation_09.py
(+19 files in other folders)
